<resources>
    <string name="app_name">Multiscreen</string>
    <string name="hey_great_farhad_dubey_meditate_u_ll_become_powerfull_ur_brain_will_stop_deflecting"><![CDATA[hey Great Farhad Dubey, Meditate U\'ll become powerfull. & Ur Brain will stop deflecting...]]></string>
    <string name="item2">Item2</string>
    <string name="email">Email</string>
    <string name="item3">Item3</string>
    <string name="place_order">Place Order</string>
    <string name="welcome_to_wonder_cafe_resturants"><![CDATA[Welcome to Wonder Cafe & Resturants...]]></string>
</resources>