<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/welcome_to_wonder_cafe_resturants"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="376dp"
        android:layout_height="30dp"
        android:layout_marginTop="22dp"
        android:hint="Item1"
        android:text="Name"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="376dp"
        android:layout_height="28dp"
        android:layout_marginTop="10dp"
        android:hint="@string/item2"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="376dp"
        android:layout_height="29dp"
        android:layout_marginTop="10dp"
        android:hint="@string/item3"
        android:text="Phone No."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="HardcodedText,MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="placeOrder"
        android:text="@string/place_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        app:layout_constraintVertical_bias="0.347" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="326dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Item1"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="HardcodedText,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="320dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Item2"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1"
        tools:ignore="HardcodedText,MissingConstraints,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="321dp"
        android:layout_height="46dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Item3"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,MissingConstraints,TouchTargetSizeCheck"
        tools:layout_editor_absoluteY="358dp" />

</androidx.constraintlayout.widget.ConstraintLayout>